<?xml version="1.0"?>
<package format="2">
  <name>benchmark</name>
  <version>1.5.0</version>
  <description>
    A microbenchmark support library.
  </description>
  <maintainer email="milan@thekobi.com">Milan Vukov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
    <third_party/>
  </export>
</package>
